--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "babel-register": "^6.26.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fetch": "^1.1.0",
     "node-fetch": "^2.6.0",
     "openweather-apis": "^4.3.1",
     "socket.io": "^2.3.0",
